<resources>
    <string name="app_name"> H 2 O </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_s">S &#160;&#160;&#160; (Science)</string>
    <string name="menu_t">T &#160;&#160;&#160; (Technology)</string>
    <string name="menu_r">R &#160;&#160;&#160; (Reading)</string>
    <string name="menu_ss">S &#160;&#160;&#160; (Social Studies)</string>
    <string name="menu_a">A &#160;&#160;&#160; (Arts)</string>
    <string name="menu_m">M &#160;&#160;&#160; (Math)</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Options</string>

    <string name="pref_title_social_recommendations">Color Theme</string>
    <string name="pref_description_social_recommendations">Dark theme is:
    </string>

    <string name="pref_title_display_name">Nick name</string>
    <string name="pref_default_display_name">R2-D2</string>

    <string name="pref_title_add_friends_to_messages">Show hints and tips</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_tools_settings">Tools</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_colors">Color Scheme</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_account">Account</string>

    <string name="pref_title_account_settings">Account settings</string>
    <string name="pref_title_account">Location</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>Mexico</item>
        <item>Poland</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>MX</item>
        <item>PL</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Notification</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="khan">An hour of code</string>
    <string name="lego">Lego mindstorms</string>
    <string name="neiu">Game Making Club</string>
    <string name="txtScience">Science</string>
    <string name="txtTechnology">Technology</string>
    <string name="txtReading">Reading</string>
    <string name="txtSocialStudies">Social Studies</string>
    <string name="txtArts">Arts</string>
    <string name="txtMath">Math</string>
    <string name="about">About</string>
    <string name="hide">Hide</string>
    <string name="title_activity_settings">Settings</string>
    <string name="created_by_1">Created by:</string>
    <string name="about_by_1">The coolest guys in the universe!</string>
    <string name="created_by_2"> Scott R. Simon \n &amp; \n Matthew Mola</string>
    <string name="about_by_2">Second to none!</string>
    <string name="version">Version 4.20</string>
    <string name="choose_color_for_background">Choose Color for Background</string>
    <string name="blue_color">Blue color</string>
    <string name="random_color">Random color</string>
    <string name="green_color">Green color</string>
    <string name="red_color">Red color</string>
    <string name="reset_color">Reset</string>
    <string name="colors">Color Scheme</string>
    <string name="market_message">"Market: "</string>
    <string name="recommend_message">"\nRecommendations: "</string>
    <string name="name_message">"\nName: "</string>
    <string name="toggle_dark_text">Toggle Dark Text</string>
    <string name="Translation">Translation</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="ColorScheme">Color Scheme</string>
    <string name="todo">TODO</string>
    <string name="technology_layout">Technology Layout</string>
    <string name="BatterySettings">Battery Settings</string>
    <string name="aboutactivity">Cool Dudes</string>
    <string name="show_map">Show Map</string>
    <string name="calculator">Calculator</string>
    <string name="toolsimage">toolsImage</string>
    <string name="tools">Tools</string>
    <string name="weather">WEATHER</string>
    <string name="battery_level">BATTERY LEVEL</string>
    <string name="hourofcodeimg">hourofcodeImg</string>
    <string name="legoimg">legoImg</string>
    <string name="social_studies_layout">Social Studies Layout</string>

    <string name="science_layout">Science Layout</string>
    <string name="reading_layout">Reading Layout</string>
    <string name="Creator2">mjmola@neiu.edu</string>
    <string name="Creator1">SR-Simon@neiu.edu</string>
    <string name="app_title">Homework Helper Online</string>
    <string name="operationbtn">Button</string>
    <string name="nxtBtn">NEXT</string>
    <string name="submitBtn">Submit</string>
    <string name="answerTxt">= ?</string>
    <string name="questionTxt">0 + 0</string>
    <string name="savebtn">Save</string>
    <string name="textview">TextView</string>
    <string name="battery_leveltxt">Battery Level:</string>
    <string name="charging_connectiontxt">Charging Connection:</string>
    <string name="charging_statustxt">Charging Status:</string>
    <string name="arts_layout">Arts Layout</string>
    <string name="first_activity">First activity</string>
    <string name="nicknametxt">nickName</string>
    <string name="timetxt">Time</string>
    <string name="title_activity_maps">Map</string>
</resources>
