<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jedi819.stream_h2o.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/colorToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red_color" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_color" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue_color" />

    <Button
        android:id="@+id/buttonRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_color" />


    <Switch
        android:id="@+id/switchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray"
        android:checked="true"
        android:enabled="true"
        android:text="@string/toggle_dark_text" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/reset_color"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/savebtn"
        android:textColor="@android:color/background_light" />

</LinearLayout>
