<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.jedi819.stream_h2o.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/textTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tools"
        android:textAlignment="center"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgtools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/toolsimage"
        android:src="@mipmap/ic_tools_foreground" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/calculator"  />


    <Button
        android:id="@+id/btn_showMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/show_map"  />


    <Button
        android:id="@+id/btn_battery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/battery_level" />

    <Button
        android:id="@+id/btn_weather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/weather" />


</LinearLayout>
