<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="55dp">

    <LinearLayout
        android:id="@+id/operationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nav_mathtxt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|end"
            android:padding="5dp"
            android:text="@string/questionTxt"
            android:textColor="#ff333333"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center|start"
            android:padding="5dp"
            android:text="@string/answerTxt"
            android:textColor="#ff333333"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/answerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/operationLayout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/answerSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submitBtn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/anotherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAnother"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/nxtBtn"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anotherLayout"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnswitch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/operationbtn" />




    </LinearLayout>
    <TextView
        android:id="@+id/nav_math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />
    <ImageView
        android:id="@+id/imageHeaderMath"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ic_app_background"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_math_banner_foreground" />

</RelativeLayout>