<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jedi819.stream_h2o.SettingsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/created1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/created_by_1"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="214dp" />

        <TextView
            android:id="@+id/created2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/created_by_2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="214dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:foregroundGravity="bottom"
            android:gravity="bottom|center"
            android:padding="25dp"
            android:text="@string/about_by_1"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="214dp" />

        <TextView
            android:id="@+id/about2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center"
            android:padding="25dp"
            android:text="@string/about_by_2"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="214dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:padding="25dp"
            android:text="@string/version"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="214dp" />
    </LinearLayout>
</LinearLayout>
